--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "nodemon src/presentation-layer/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csurf": "^1.11.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "mysql": "^2.18.1",
