--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,5 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: "abc123"
       MYSQL_DATABASE: "my-platform"
+    ports:
+      - "3306:3306"
