--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/presentation-layer/app.js",
+    "start": "nodemon src/presentation-layer/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^6.1.0",
     "connect-redis": "^6.1.1",
     "csurf": "^1.11.0",
     "express": "^4.17.2",
