--- a/web-app/package.json
+++ b/web-app/package.json
@@ -20,6 +20,8 @@
     "heroes-talents": "git+https://git@github.com/heroespatchnotes/heroes-talents.git",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
-    "redis": "^3.1.2"
+    "pg": "^8.7.3",
+    "redis": "^3.1.2",
+    "sequelize": "^6.17.0"
   }
 }
