--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "awilix": "^6.1.0",
+    "body-parser": "^1.19.2",
     "connect-redis": "^6.1.1",
     "csurf": "^1.11.0",
     "express": "^4.17.2",
