Changed some small details in rest-api and DAL

--- a/spa/nginx.conf
+++ b/spa/nginx.conf
@@ -7,6 +7,9 @@ http {
 
     server {
 
+        # To allow POST on static pages // det hjälpte inte...
+        error_page  405     =200 $uri;
+
         location / {
             autoindex on;
             root /data/www;
