--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     build: "./database"
     environment:
       MYSQL_ROOT_PASSWORD: "abc123"
-      MYSQL_DATABASE: "my-platform"
+      MYSQL_DATABASE: "hots_builds_database"
     ports:
       - "3306:3306"
 
@@ -23,15 +23,15 @@ services:
   "postgresql":
     build: "./postgreSQL"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=abc123
     ports:
       - '5432:5432'
 
   spa:
     image: nginx
     ports:
-      - "80:80"
+      - "8088:8088"
     volumes:
       - ./spa/nginx.conf:/etc/nginx/nginx.conf
       - ./spa/index.html:/data/www/index.html
